--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,1 +1,1 @@
-body{font-family:"Proxima Nova",Helvetica,Arial;margin:0;}.Page{width:90%;margin:0 auto;background:#eee;padding:1em;}.List-search{background:#fcfcfc;border-bottom:1px solid #e0e0e0;padding:1em;border-radius:0.3em;margin-bottom:1.5em;}
+body{font-family:"Proxima Nova",Helvetica,Arial;margin:0;}.Page{width:90%;margin:0 auto;background:#eee;padding:1em;}.List-search{background:#fcfcfc;border-bottom:1px solid #e0e0e0;padding:1em;border-radius:0.3em;margin-bottom:1.5em;}[ng\:cloak],[ng-cloak],[data-ng-cloak],[x-ng-cloak],.ng-cloak,.x-ng-cloak{display:none !important;}
