Conclusion of Controllers and Markup

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -19,6 +19,9 @@ body{
   margin-bottom: 1.5em;
 }
 
+input.ng-invalid.ng-dirty{
+  background-color: pink;
+}
 
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important;
