--- a/app/templates/EventDetails.html
+++ b/app/templates/EventDetails.html
@@ -29,19 +29,13 @@
     </select>
     <ul class="thumbnails">
       <li ng-repeat="session in event.sessions | orderBy:sortorder | filter:query " id="session{{session.id}}">
-        <div class="span0 well votingWidget">
-          <div class="votingButton" ng-click="upVoteSession(session)">
-            <i class="icon-chevron-up"></i>
-            up
-          </div>
-          <div class="badge badge-inverse">
-            <div>{{ session.upVoteCount }}</div>
-          </div>
-          <div class="votingButton" ng-click="downVoteSession(session)">
-            <i class="icon-chevron-down"></i>
-            down
-          </div>
-        </div>
+
+        <div upvote
+          upvote="upVoteSession(session)"
+          downvote="downVoteSession(session)" 
+          count="session.upVoteCount"
+          ></div>
+
         <h4>{{ session.name }}</h4>
         <h6>{{ session.creatorName }}</h6>
         <span>Duration: {{ session.duration | durations }}</span>
