Corrections in directives

--- a/app/templates/directives/upvote.html
+++ b/app/templates/directives/upvote.html
@@ -1,11 +1,11 @@
 <div class="span0 well votingWidget">
   <div class="votingButton" ng-click="upvote()">
-    up
+    vote up
   </div>
   <div class="badge badge-inverse">
     <div>{{ count }}</div>
   </div>
   <div class="votingButton" ng-click="downvote()">
-    down
+    vote down
   </div>
 </div>
