--- a/app/templates/EventDetails.html
+++ b/app/templates/EventDetails.html
@@ -29,18 +29,14 @@
     </select>
     <ul class="thumbnails">
       <li ng-repeat="session in event.sessions | orderBy:sortorder | filter:query " id="session{{session.id}}">
-
-        <div upvote
-          upvote="upVoteSession(session)"
-          downvote="downVoteSession(session)" 
-          count="session.upVoteCount"
-          ></div>
-
+        <upvote upvote="upVoteSession(session)" downvote="downVoteSession(session)" count="session.upVoteCount" ></upvote>
         <h4>{{ session.name }}</h4>
         <h6>{{ session.creatorName }}</h6>
         <span>Duration: {{ session.duration | durations }}</span>
         <span>Level: {{ session.level }}</span>
         <p>{{ session.abstract }}</p>
+
+
       </li>
     </ul>
   </div>
