--- a/app/templates/NewEvent.html
+++ b/app/templates/NewEvent.html
@@ -7,7 +7,7 @@
       <label>Event Name:</label>
       <input type="text" ng-model="event.name" placeholder="Name of your event..." required >
       <label>Event Date:</label>
-      <input type="text" ng-model="event.date" placeholder="format (mm/dd/yyyy)" required ng-pattern="/\d\d/\d\d/\d\d\d\d/" >
+      <input type="text" ng-model="event.date" date-keys placeholder="format (mm/dd/yyyy)" required ng-pattern="/\d\d/\d\d/\d\d\d\d/" >
       <label>Event Time:</label>
       <input type="text" ng-model="event.time" placeholder="Start and end time..." >
       <label>Event Location:</label>
