--- a/app/templates/EventDetails.html
+++ b/app/templates/EventDetails.html
@@ -29,7 +29,10 @@
     </select>
     <ul class="thumbnails">
       <li ng-repeat="session in event.sessions | orderBy:sortorder | filter:query " id="session{{session.id}}">
-        <upvote upvote="upVoteSession(session)" downvote="downVoteSession(session)" count="session.upVoteCount" ></upvote>
+        <upvote
+          upvote="upVoteSession(session)"
+          downvote="downVoteSession(session)"
+          count="session.upVoteCount" ></upvote>
         <h4>{{ session.name }}</h4>
         <h6>{{ session.creatorName }}</h6>
         <span>Duration: {{ session.duration | durations }}</span>
