--- a/app/templates/EventDetails.html
+++ b/app/templates/EventDetails.html
@@ -1,19 +1,6 @@
 <div class="row">
-  <greeting>
-    <div finnish></div>
-  </greeting>
-  <h2 ng-bind-template="{{event.name}} {{ event.date}}"></h2>
-  <button type="button" class="btn btn-primary" ng-click="reload()">Reload</button>
-  <div class="col-md-4">
-    <p>{{ event.date }}</p>
-    <p>{{ event.time }}</p>
-  </div>
 
-  <button class="btn" ng-disabled="buttonDisabled">Disabled</button>
-
-  <address class="col-md-4">
-    {{event.location.address}} - {{event.location.city }} - {{event.location.province}}
-  </address>
+  <event-details event="event"></event-details>
 
   <div class="col-md-12">
     <hr>
@@ -32,22 +19,14 @@
     </select>
     <ul class="thumbnails">
       <li ng-repeat="session in event.sessions | orderBy:sortorder | filter:query " id="session{{session.id}}">
-        <upvote
-          upvote="upVoteSession(session)"
-          downvote="downVoteSession(session)"
-          count="session.upVoteCount" >
-        </upvote>
-
-        <div class="well span9">
-          <collapsible title="{{session.name}}">
-            <h6>{{ session.creatorName }}</h6>
-            <span>Duration: {{ session.duration | durations }}</span>
-            <span>Level: {{ session.level }}</span>
-            <p>{{ session.abstract }}</p>
-          </collapsible>
+        <div class="row no-select">
+          <upvote
+            upvote="upVoteSession(session)"
+            downvote="downVoteSession(session)"
+            count="session.upVoteCount" >
+          </upvote>
+          <session-thumbnail session="session" editable="allowUserToEditSession(session)" edit="editSession(session)"></session-thumbnail>
         </div>
-
-
 
       </li>
     </ul>
